taking a few images out of picture

--- a/_posts/2014-07-17-Boosting.markdown
+++ b/_posts/2014-07-17-Boosting.markdown
@@ -3,6 +3,6 @@ layout: default
 modal-id: 5
 img: ada_plot.png
 alt: Variable Importance Plot for Ada Boosting
-description: Boosting is historically the first ensemble method. The independence of weak learners is obtained by modifying the training data using weights after training each weak learner. The AdaBoost algorithm of Freud and Schapire was the first practiceal boosting algorithm, and remains one of the most widely used and standard. <br>Pseudocode for AdaBoost <img src="img/picture/AdaBoost.png" class="img-responsive img-centered" alt="">AdaBoost using Desicion Stump as Weak Learner<br> <img src="img/picture/AdaBoostWeakLearner.png" class="img-responsive img-centered" alt=""> To save computation time,we only include first 100 features selected by entropy. Below is the feature importance. <img src="img/portfolio/ada_plot.png" class="img-responsive img-centered" alt="">
+description: Boosting is historically the first ensemble method. The independence of weak learners is obtained by modifying the training data using weights after training each weak learner. The AdaBoost algorithm of Freud and Schapire was the first practiceal boosting algorithm, and remains one of the most widely used and standard. <br>Pseudocode for AdaBoost <img src="img/AdaBoost.png" class="img-responsive img-centered" alt="">AdaBoost using Desicion Stump as Weak Learner<br> <img src="img/AdaBoostWeakLearner.png" class="img-responsive img-centered" alt=""> To save computation time,we only include first 100 features selected by entropy. Below is the feature importance. <img src="img/portfolio/ada_plot.png" class="img-responsive img-centered" alt="">
 
 ---
